# csid

./: .gitignore  CMakeLists.txt  README.md
examples/: csid.c  player.cpp
include/: cppsid.h  libcsid.h
src/: cppsid.cpp  libcsidfull.c  libcsidlight.c
